"solved" permission hell

--- a/produce.ini
+++ b/produce.ini
@@ -44,7 +44,7 @@ dep.model = models/parse/en.model
 recipe =
 	set -e
 	set -o pipefail
-	cat %{tok} | python %{add_supertag_constraints} %{super} | ./ext/viasock/viasock run --process-timeout 60 --server-timeout 86400 --log schmog/easyccg/en.log --output-terminator '^$' --output-prelude 1 java -jar %{easyccg} --inputFormat constrained --model %{model}%{generic} --unrestrictedRules --rootCategories S[dcl] S[wq] S[q] NP S[b]\\NP S[intj] --outputFormat boxer | python %{cac_renumber} > %{target} 2> log/%{x}.parse.log
+	cat %{tok} | python %{add_supertag_constraints} %{super} | ./ext/viasock/viasock run --process-timeout 60 --server-timeout 86400 --log log/easyccg/en.log --output-terminator '^$' --output-prelude 1 java -jar %{easyccg} --inputFormat constrained --model %{model}%{generic} --unrestrictedRules --rootCategories S[dcl] S[wq] S[q] NP S[b]\\NP S[intj] --outputFormat boxer | python %{cac_renumber} > %{target} 2> log/%{x}.parse.log
 
 # Add tags from other layers to parse
 [out/%{x}.parse.tags]
