Removed obsolete per-target logging

--- a/produce.ini
+++ b/produce.ini
@@ -27,7 +27,7 @@ recipe = cat %{off} | python %{off2tok} > %{target}
 # this is just a dummy, no supertag constraints yet
 [out/%{x}.super]
 dep.off = out/%{x}.tok.off
-recipe = cat %{off} | sed -e 's/.*//' > %{target} 2> log/%{x}.super.log
+recipe = cat %{off} | sed -e 's/.*//' > %{target}
 
 ### PARSING ###################################################################
 
@@ -44,7 +44,7 @@ dep.model = models/parse/en.model
 recipe =
 	set -e
 	set -o pipefail
-	cat %{tok} | python %{add_supertag_constraints} %{super} | ./ext/viasock/viasock run --process-timeout 60 --server-timeout 86400 --log log/easyccg/en.log --output-terminator '^$' --output-prelude 1 java -jar %{easyccg} --inputFormat constrained --model %{model}%{generic} --unrestrictedRules --rootCategories S[dcl] S[wq] S[q] NP S[b]\\NP S[intj] --outputFormat boxer | python %{cac_renumber} > %{target} 2> log/%{x}.parse.log
+	cat %{tok} | python %{add_supertag_constraints} %{super} | ./ext/viasock/viasock run --process-timeout 60 --server-timeout 86400 --log log/easyccg/en.log --output-terminator '^$' --output-prelude 1 java -jar %{easyccg} --inputFormat constrained --model %{model}%{generic} --unrestrictedRules --rootCategories S[dcl] S[wq] S[q] NP S[b]\\NP S[intj] --outputFormat boxer | python %{cac_renumber} > %{target}
 
 # Add tags from other layers to parse
 [out/%{x}.parse.tags]
@@ -52,7 +52,7 @@ dep.parse = out/%{x}.parse
 dep.insert = ./src/python/cac_addtags.py
 deps = src/python/caclib.py
 dep.off = out/%{x}.tok.off
-recipe = cat %{parse} | %{insert} %{off} from <(cut -d ' ' -f 1 %{off}) to <(cut -d ' ' -f 2 %{off}) > %{target} 2> log/%{x}.parse.tags.log
+recipe = cat %{parse} | %{insert} %{off} from <(cut -d ' ' -f 1 %{off}) to <(cut -d ' ' -f 2 %{off}) > %{target}
 
 ### BOXING ####################################################################
 
@@ -61,4 +61,4 @@ recipe = cat %{parse} | %{insert} %{off} from <(cut -d ' ' -f 1 %{off}) to <(cut
 cond = %{projected in ('', '.projected')}
 dep.parse = out/%{x}.parse.tags%{projected}
 dep.boxer = ext/boxer/boxer2
-recipe = %{boxer} --input %{parse} --semantics der --resolve false --tense --instantiate --modal --theory sdrt --copula false --nn --elimeq --roles verbnet --format xml --warnings false --output %{target} 2> log/%{x}.der.xml.log
+recipe = %{boxer} --input %{parse} --semantics der --resolve false --tense --instantiate --modal --theory sdrt --copula false --nn --elimeq --roles verbnet --format xml --warnings false --output %{target}
