Now creating .super files

--- a/produce.ini
+++ b/produce.ini
@@ -24,10 +24,13 @@ recipe = cat %{off} | python %{off2tok} > %{target}
 
 ### SUPERTAGGING ##############################################################
 
-# this is just a dummy, no supertag constraints yet
-[out/%{x}/%{user}.super]
-dep.off = out/%{x}/%{user}.tok.off
-recipe = cat %{off} | sed -e 's/.*//' > %{target}
+# We leave the supertagging mainly to the parser, but if there is a BOW, we
+# constrain it to use that supertag.
+
+[out/%{prefix}/%{sid}/%{user}.super]
+dep.off = out/%{prefix}/%{sid}/%{user}.tok.off
+dep.bows = ./src/python/bows_super.py
+recipe = python3 %{bows} %{sid} %{user} %{off} > %{target}
 
 ### PARSING ###################################################################
 
