Re-run BOW application iff there are new ones
Still using the ugly sync_bows trick, waiting for Produce 3.0 with its
single-pass build algorithm to deliver us from this evil.

--- a/produce.ini
+++ b/produce.ini
@@ -1,3 +1,48 @@
+### UTILITIES #################################################################
+
+[]
+prelude =
+	import errno
+	import os
+	import subprocess
+
+	def makedirs(path):
+		try:
+			os.makedirs(path)
+		except OSError as error:
+			if error.errno != errno.EEXIST:
+				raise error
+
+	def sync_bows(sentence_id, user, layer):
+		"""
+		Makes the file %%{x}/%%{user}/%%{layer}.bows up to date with
+		information from the database. Does not change its timestamp if
+		its contents do not change. Returns True if there were changes,
+		False otherwise.
+
+		This is an ugly trick to simulate a dependency into the
+		database. Produce 3.0 will have a feature making this trick
+		superfluous.
+		"""
+		dirpath = os.path.join('out', sentence_id[:2], sentence_id)
+		makedirs(dirpath)
+		filepath = os.path.join(dirpath, '{}.{}.bows'.format(user, layer))
+		bowlist = subprocess.check_output(['python3', './src/python/bows_tsv.py', sentence_id, user, layer]).decode('UTF-8')
+		try:
+			with open(filepath, encoding='UTF-8') as f:
+				old_bowlist = f.read()
+			if old_bowlist == bowlist:
+				return False
+		except FileNotFoundError:
+			pass
+		with open(filepath, 'w', encoding='UTF-8') as f:
+			f.write(bowlist)
+		return True
+
+[dummy]
+# Dummy task. Targets depending on this will be reproduced on every invocation.
+type = task
+
 ### TOKENIZATION ##############################################################
 
 [out/%{x}/%{user}.tok.iob]
@@ -30,7 +75,9 @@ recipe = cat %{off} | python %{off2tok} > %{target}
 [out/%{prefix}/%{sid}/%{user}.super]
 dep.off = out/%{prefix}/%{sid}/%{user}.tok.off
 dep.bows = ./src/python/bows_super.py
-recipe = python3 %{bows} %{sid} %{user} %{off} > %{target}
+dep.bowfile = out/%{prefix}/%{sid}/%{user}.super.bows
+deps = %{'dummy' if sync_bows(sid, user, 'super') else ''}
+recipe = python3 %{bows} %{bowfile} %{off} > %{target}
 
 ### PARSING ###################################################################
 
