Fixed execution issue with Elephant

--- a/produce.ini
+++ b/produce.ini
@@ -54,7 +54,7 @@ recipe =
 	set -e
 	set -o pipefail
 	mkdir -p `dirname %{target}`
-	export PATH=ext/elephant/src/wapiti:ext/elephant/src/elman:$PATH
+	export PATH=ext/elephant/ext:$PATH
 	cat %{raw} | python3 %{txt2iob} | ./ext/viasock/viasock run --process-timeout 60 --server-timeout 86400 -t '^$' -T '^$' --log log/elephant/en.log %{elephant} -m %{model} -f iob -F iob | sed -e 's/\t/ /' > %{target}
 
 [out/%{x}/%{user}.tok.off]
