Removed currently unused "projecte" rule

--- a/produce.ini
+++ b/produce.ini
@@ -107,8 +107,7 @@ recipe = cat %{parse} | %{insert} %{off} from <(cut -d ' ' -f 1 %{off}) to <(cut
 ### BOXING ####################################################################
 
 # Run Boxer for derivations (XML output)
-[out/%{x}/%{user}.der.xml%{projected}]
-cond = %{projected in ('', '.projected')}
-dep.parse = out/%{x}/%{user}.parse.tags%{projected}
+[out/%{x}/%{user}.der.xml]
+dep.parse = out/%{x}/%{user}.parse.tags
 dep.boxer = ext/boxer/boxer2
 recipe = %{boxer} --input %{parse} --semantics der --resolve false --tense --instantiate --modal --theory sdrt --copula false --nn --elimeq --roles verbnet --format xml --warnings false --output %{target}
