Broken parses now remain editable
Using lexlists to stand in for missing derivations.

--- a/produce.ini
+++ b/produce.ini
@@ -107,7 +107,21 @@ recipe = cat %{parse} | %{insert} %{off} from <(cut -d ' ' -f 1 %{off}) to <(cut
 ### BOXING ####################################################################
 
 # Run Boxer for derivations (XML output)
-[out/%{x}/%{user}.der.xml]
+[out/%{x}/%{user}.der.xml.incomplete]
 dep.parse = out/%{x}/%{user}.parse.tags
 dep.boxer = ext/boxer/boxer2
 recipe = %{boxer} --input %{parse} --semantics der --resolve false --tense --instantiate --modal --theory sdrt --copula false --nn --elimeq --roles verbnet --format xml --warnings false --output %{target}
+
+# Create an XML file containing all tags, used for adding missing derivation placeholders
+[out/%{x}/%{user}.lex.xml]
+dep.off = out/%{x}/%{user}.tok.off
+dep.cols2xml = src/python/cols2xml.py
+dep.super = out/%{x}/%{user}.super
+recipe = paste <(cut -d ' ' -f 3 %{off}) <(cut -d ' ' -f 4- %{off}) <(cut -d ' ' -f 1 %{off}) <(cut -d ' ' -f 2 %{off}) %{super} | python %{cols2xml} from to super > %{target}
+
+# Add placeholders for sentences missing derivations to Boxer output
+[out/%{x}/%{user}.der.xml]
+dep.incomplete = out/%{x}/%{user}.der.xml.incomplete
+dep.lexxml = out/%{x}/%{user}.lex.xml
+dep.dermerge = ./src/python/dermerge.py
+recipe = python %{dermerge} %{incomplete} %{lexxml} > %{target}
