Refactored supertagging/parsing rules

--- a/produce.ini
+++ b/produce.ini
@@ -81,11 +81,18 @@ recipe = python3 %{bows} %{bowfile} %{off} > %{target}
 
 ### PARSING ###################################################################
 
+[out/%{x}/%{user}.constrained]
 # TODO include span constraints (e.g. "there is a constituent from 7 22")
-[out/%{x}/%{user}.parse]
 dep.tok = out/%{x}/%{user}.tok
 dep.super = out/%{x}/%{user}.super
 dep.add_supertag_constraints = src/python/add_supertag_constraints.py
+recipe =
+	set -e
+	set -o pipefail
+	cat %{tok} | python %{add_supertag_constraints} %{super} > %{target}
+
+[out/%{x}/%{user}.parse]
+dep.constrained = out/%{x}/%{user}.constrained
 dep.cac_renumber = src/python/cac_renumber.py
 dep.easyccg = ext/easyccg/easyccg.jar
 #generic = %{'' if lang == 'en' else ' -g'}
@@ -94,7 +101,7 @@ dep.model = models/parse/en.model
 recipe =
 	set -e
 	set -o pipefail
-	cat %{tok} | python %{add_supertag_constraints} %{super} | ./ext/viasock/viasock run --process-timeout 60 --server-timeout 86400 --log log/easyccg/en.log --output-terminator '^$' --output-prelude 1 java -jar %{easyccg} --inputFormat constrained --model %{model}%{generic} --unrestrictedRules --rootCategories S[dcl] S[wq] S[q] NP S[b]\\NP S[intj] --outputFormat boxer | python %{cac_renumber} > %{target}
+	cat %{constrained} | ./ext/viasock/viasock run --process-timeout 60 --server-timeout 86400 --log log/easyccg/en.log --output-terminator '^$' --output-prelude 1 java -jar %{easyccg} --inputFormat constrained --model %{model}%{generic} --unrestrictedRules --rootCategories S[dcl] S[wq] S[q] NP S[b]\\NP S[intj] --outputFormat boxer | python %{cac_renumber} > %{target}
 
 # Add tags from other layers to parse
 [out/%{x}/%{user}.parse.tags]
