Span BOWs now supported

--- a/produce.ini
+++ b/produce.ini
@@ -79,17 +79,31 @@ dep.bowfile = out/%{prefix}/%{sid}/%{user}.super.bows
 deps = %{'dummy' if sync_bows(sid, user, 'super') else ''}
 recipe = python3 %{bows} %{bowfile} %{off} > %{target}
 
+### SPANS #####################################################################
+
+# We leave finding spans mainly to the parser (obviously), but if there is a
+# BOW, we constrain it to make that span a constituent.
+
+[out/%{prefix}/%{sid}/%{user}.span]
+dep.off = out/%{prefix}/%{sid}/%{user}.tok.off
+dep.bows = ./src/python/bows_span.py
+dep.bowfile = out/%{prefix}/%{sid}/%{user}.span.bows
+deps = %{'dummy' if sync_bows(sid, user, 'span') else ''}
+recipe = python %{bows} %{bowfile} %{off} > %{target}
+
 ### PARSING ###################################################################
 
-[out/%{x}/%{user}.constrained]
+[out/%{prefix}/%{sid}/%{user}.constrained]
 # TODO include span constraints (e.g. "there is a constituent from 7 22")
-dep.tok = out/%{x}/%{user}.tok
-dep.super = out/%{x}/%{user}.super
+dep.tok = out/%{prefix}/%{sid}/%{user}.tok
+dep.super = out/%{prefix}/%{sid}/%{user}.super
 dep.add_supertag_constraints = src/python/add_supertag_constraints.py
+dep.span = out/%{prefix}/%{sid}/%{user}.span
+dep.add_span_constraints = src/python/add_span_constraints.py
 recipe =
 	set -e
 	set -o pipefail
-	cat %{tok} | python %{add_supertag_constraints} %{super} > %{target}
+	cat %{tok} | python %{add_supertag_constraints} %{super} | python %{add_span_constraints} %{span} > %{target}
 
 [out/%{x}/%{user}.parse]
 dep.constrained = out/%{x}/%{user}.constrained
