No longer using Boxer
Directly translating EasyCCG output to Boxer-style XML

--- a/produce.ini
+++ b/produce.ini
@@ -130,8 +130,9 @@ recipe = cat %{parse} | %{insert} %{off} from <(cut -d ' ' -f 1 %{off}) to <(cut
 # Run Boxer for derivations (XML output)
 [out/%{lang}/%{pr}/%{sid}/%{user}.der.xml.incomplete]
 dep.parse = out/%{lang}/%{pr}/%{sid}/%{user}.parse.tags
-dep.boxer = ext/boxer/boxer2
-recipe = %{boxer} --input %{parse} --semantics der --resolve false --tense --instantiate --modal --theory sdrt --copula false --nn --elimeq --roles verbnet --format xml --warnings false --output %{target}
+dep.parse2xml = src/prolog/parse2xml.pl
+deps = src/prolog/util.pl src/prolog/slashes.pl
+recipe = swipl -l %{parse2xml} -g main %{parse} > %{target}
 
 # Create an XML file containing all tags, used for adding missing derivation placeholders
 [out/%{lang}/%{pr}/%{sid}/%{user}.lex.xml]
