Changed path to Elephant executable
No installation needed this way.

--- a/produce.ini
+++ b/produce.ini
@@ -48,7 +48,7 @@ type = task
 [out/%{lang}/%{pr}/%{sid}/%{user}.tok.iob]
 dep.raw = raw/%{lang}/%{pr}/%{sid}.raw
 dep.txt2iob = src/python/txt2iob.py
-dep.elephant = ext/elephant/elephant
+dep.elephant = ext/elephant/src/elephant
 dep.model = models/tok.iob/%{lang}.model
 recipe =
 	set -e
