No longer boxing

--- a/produce.ini
+++ b/produce.ini
@@ -126,9 +126,7 @@ deps = src/python/caclib.py
 dep.off = out/%{lang}/%{pr}/%{sid}/%{user}.tok.off
 recipe = cat %{parse} | %{insert} %{off} from <(cut -d ' ' -f 1 %{off}) to <(cut -d ' ' -f 2 %{off}) > %{target}
 
-### BOXING ####################################################################
-
-# Run Boxer for derivations (XML output)
+# Convert derivations to XML
 [out/%{lang}/%{pr}/%{sid}/%{user}.der.xml.incomplete]
 dep.parse = out/%{lang}/%{pr}/%{sid}/%{user}.parse.tags
 dep.parse2xml = src/prolog/parse2xml.pl
@@ -142,7 +140,7 @@ dep.cols2xml = src/python/cols2xml.py
 dep.super = out/%{lang}/%{pr}/%{sid}/%{user}.super
 recipe = paste <(cut -d ' ' -f 3 %{off}) <(cut -d ' ' -f 4- %{off}) <(cut -d ' ' -f 1 %{off}) <(cut -d ' ' -f 2 %{off}) %{super} | python %{cols2xml} from to super > %{target}
 
-# Add placeholders for sentences missing derivations to Boxer output
+# Add placeholders for sentences missing derivations to parser output
 [out/%{lang}/%{pr}/%{sid}/%{user}.der.xml]
 dep.incomplete = out/%{lang}/%{pr}/%{sid}/%{user}.der.xml.incomplete
 dep.lexxml = out/%{lang}/%{pr}/%{sid}/%{user}.lex.xml
