Added Producefile for projection
So far only using to build English derivations without BOWs (and using
the original CCGrebank-based model).

--- a/produce.ini
+++ b/produce.ini
@@ -43,6 +43,8 @@ prelude =
 # Dummy task. Targets depending on this will be reproduced on every invocation.
 type = task
 
+# TODO add raw rule, remove raw file creation from web app
+
 ### TOKENIZATION ##############################################################
 
 [out/%{lang}/%{pr}/%{sid}/%{user}.tok.iob]
