Moved raw file creation from webapp to produce.ini

--- a/produce.ini
+++ b/produce.ini
@@ -43,7 +43,14 @@ prelude =
 # Dummy task. Targets depending on this will be reproduced on every invocation.
 type = task
 
-# TODO add raw rule, remove raw file creation from web app
+### RAW #######################################################################
+
+[raw/%{lang}/%{pr}/%{sid}.raw]
+dep.raw = src/python/raw.py
+recipe =
+	set -e
+	mkdir -p raw/%{lang}/%{pr}
+	python3 %{raw} %{lang} %{sid} > %{target}
 
 ### TOKENIZATION ##############################################################
 
@@ -113,6 +120,7 @@ dep.easyccg = ext/easyccg/easyccg.jar
 #generic = %{'' if lang == 'en' else ' -g'}
 generic =
 dep.model = models/parse/%{lang}.model
+# TODO use CCGrebank-based model!
 recipe =
 	set -e
 	set -o pipefail
