Integrated projection into main Producefile.
(Not done yet.)

--- a/produce.ini
+++ b/produce.ini
@@ -52,6 +52,18 @@ recipe =
 	mkdir -p raw/%{lang}/%{pr}
 	python3 %{raw} %{lang} %{sid} > %{target}
 
+### PROJECTION ################################################################
+
+[out/%{lang}/%{pr}/%{tid}/proj/%{sid}/proj.parse.tags]
+dep.derproj = src/prolog/derproj.pl
+deps = src/prolog/der.pl src/prolog/util.pl src/prolog/catobj.pl src/prolog/sr.pl src/prolog/slashes.pl src/prolog/ccg.pl
+dep.der = out/eng/%{sid[:2]}/%{sid}/auto.der.xml.incomplete
+dep.wordalign = out/%{lang}/%{pr}/%{tid}/proj/%{sid}/auto.wordalign
+dep.sentalign = out/%{lang}/%{pr}/%{tid}/proj/%{sid}/auto.sentalign
+dep.toff = out/%{lang}/%{pr}/%{tid}/auto.tok.off
+dep.soff = out/eng/%{sid[:2]}/%{sid}/auto.tok.off
+recipe = swipl -l %{derproj} -g main %{der} %{wordalign} %{sentalign} %{toff} %{soff} > %{target}
+
 ### TOKENIZATION ##############################################################
 
 [out/%{lang}/%{pr}/%{sid}/%{user}.tok.iob]
