Now supporting tokenization BOWs
No UI to add them, they have to be inserted directly into the database
for now.

--- a/produce.ini
+++ b/produce.ini
@@ -27,7 +27,7 @@ prelude =
 		dirpath = os.path.join('out', lang, sentence_id[:2], sentence_id)
 		makedirs(dirpath)
 		filepath = os.path.join(dirpath, '{}.{}.bows'.format(user, layer))
-		bowlist = subprocess.check_output(['python3', './src/python/bows_tsv.py', sentence_id, user, layer]).decode('UTF-8')
+		bowlist = subprocess.check_output(['python3', './src/python/bows_tsv.py', lang, sentence_id, user, layer]).decode('UTF-8')
 		try:
 			with open(filepath, encoding='UTF-8') as f:
 				old_bowlist = f.read()
@@ -66,7 +66,7 @@ recipe = swipl -l %{derproj} -g main %{der} %{wordalign} %{sentalign} %{toff} %{
 
 ### TOKENIZATION ##############################################################
 
-[out/%{lang}/%{pr}/%{sid}/%{user}.tok.iob]
+[out/%{lang}/%{pr}/%{sid}/%{user}.tok.iob.noncorr]
 dep.raw = raw/%{lang}/%{pr}/%{sid}.raw
 dep.txt2iob = src/python/txt2iob.py
 dep.elephant = ext/elephant/src/elephant
@@ -77,6 +77,13 @@ recipe =
 	mkdir -p `dirname %{target}`
 	export PATH=ext/elephant/ext:$PATH
 	cat %{raw} | python3 %{txt2iob} | ./ext/viasock/viasock run --process-timeout 60 --server-timeout 86400 -t '^$' -T '^$' --log log/elephant/%{lang}.log %{elephant} -m %{model} -f iob -F iob | sed -e 's/\t/ /' > %{target}
+
+[out/%{lang}/%{pr}/%{sid}/%{user}.tok.iob]
+dep.noncorr = out/%{lang}/%{pr}/%{sid}/%{user}.tok.iob.noncorr
+dep.bows = src/python/bows_tok.py
+dep.bowfile = out/%{lang}/%{pr}/%{sid}/%{user}.tok.bows
+deps = %{'dummy' if sync_bows(lang, sid, user, 'tok') else ''}
+recipe = cat %{noncorr} | python3 %{bows} %{bowfile} > %{target}
 
 [out/%{lang}/%{pr}/%{sid}/%{user}.tok.off]
 dep.iob = out/%{lang}/%{pr}/%{sid}/%{user}.tok.iob
