Tokenization no longer per-user

--- a/produce.ini
+++ b/produce.ini
@@ -66,7 +66,12 @@ recipe = swipl -l %{derproj} -g main %{der} %{wordalign} %{sentalign} %{toff} %{
 
 ### TOKENIZATION ##############################################################
 
+# We use the automatic tokenization everywhere. In the rare cases where there
+# are tokenization mistakes, we have to fix them by manually insertig auto BOWs
+# into the database.
+
 [out/%{lang}/%{pr}/%{sid}/%{user}.tok.iob.noncorr]
+cond = %{user == 'auto'}
 dep.raw = raw/%{lang}/%{pr}/%{sid}.raw
 dep.txt2iob = src/python/txt2iob.py
 dep.elephant = ext/elephant/src/elephant
@@ -79,6 +84,7 @@ recipe =
 	cat %{raw} | python3 %{txt2iob} | ./ext/viasock/viasock run --process-timeout 60 --server-timeout 86400 -t '^$' -T '^$' --log log/elephant/%{lang}.log %{elephant} -m %{model} -f iob -F iob | sed -e 's/\t/ /' > %{target}
 
 [out/%{lang}/%{pr}/%{sid}/%{user}.tok.iob]
+cond = %{user == 'auto'}
 dep.noncorr = out/%{lang}/%{pr}/%{sid}/%{user}.tok.iob.noncorr
 dep.bows = src/python/bows_tok.py
 dep.bowfile = out/%{lang}/%{pr}/%{sid}/%{user}.tok.bows
@@ -86,11 +92,13 @@ deps = %{'dummy' if sync_bows(lang, sid, user, 'tok') else ''}
 recipe = cat %{noncorr} | python3 %{bows} %{bowfile} > %{target}
 
 [out/%{lang}/%{pr}/%{sid}/%{user}.tok.off]
+cond = %{user == 'auto'}
 dep.iob = out/%{lang}/%{pr}/%{sid}/%{user}.tok.iob
 dep.iob2off = src/python/iob2off.py
 recipe = cat %{iob} | python %{iob2off} > %{target}
 
 [out/%{lang}/%{pr}/%{sid}/%{user}.tok]
+cond = %{user == 'auto'}
 dep.off = out/%{lang}/%{pr}/%{sid}/%{user}.tok.off
 dep.off2tok = src/python/off2tok.py
 recipe = cat %{off} | python %{off2tok} > %{target}
@@ -101,7 +109,7 @@ recipe = cat %{off} | python %{off2tok} > %{target}
 # constrain it to use that supertag.
 
 [out/%{lang}/%{pr}/%{sid}/%{user}.super]
-dep.off = out/%{lang}/%{pr}/%{sid}/%{user}.tok.off
+dep.off = out/%{lang}/%{pr}/%{sid}/auto.tok.off
 dep.bows = ./src/python/bows_super.py
 dep.bowfile = out/%{lang}/%{pr}/%{sid}/%{user}.super.bows
 deps = %{'dummy' if sync_bows(lang, sid, user, 'super') else ''}
@@ -113,7 +121,7 @@ recipe = python3 %{bows} %{bowfile} %{off} > %{target}
 # BOW, we constrain it to make that span a constituent.
 
 [out/%{lang}/%{pr}/%{sid}/%{user}.span]
-dep.off = out/%{lang}/%{pr}/%{sid}/%{user}.tok.off
+dep.off = out/%{lang}/%{pr}/%{sid}/auto.tok.off
 dep.bows = ./src/python/bows_span.py
 dep.bowfile = out/%{lang}/%{pr}/%{sid}/%{user}.span.bows
 deps = %{'dummy' if sync_bows(lang, sid, user, 'span') else ''}
@@ -122,7 +130,7 @@ recipe = python %{bows} %{bowfile} %{off} > %{target}
 ### PARSING ###################################################################
 
 [out/%{lang}/%{pr}/%{sid}/%{user}.constrained]
-dep.tok = out/%{lang}/%{pr}/%{sid}/%{user}.tok
+dep.tok = out/%{lang}/%{pr}/%{sid}/auto.tok
 dep.super = out/%{lang}/%{pr}/%{sid}/%{user}.super
 dep.add_supertag_constraints = src/python/add_supertag_constraints.py
 dep.span = out/%{lang}/%{pr}/%{sid}/%{user}.span
@@ -151,7 +159,7 @@ recipe =
 dep.parse = out/%{lang}/%{pr}/%{sid}/%{user}.parse
 dep.insert = ./src/python/cac_addtags.py
 deps = src/python/caclib.py
-dep.off = out/%{lang}/%{pr}/%{sid}/%{user}.tok.off
+dep.off = out/%{lang}/%{pr}/%{sid}/auto.tok.off
 recipe = cat %{parse} | %{insert} %{off} from <(cut -d ' ' -f 1 %{off}) to <(cut -d ' ' -f 2 %{off}) > %{target}
 
 # Convert derivations to XML
@@ -163,7 +171,7 @@ recipe = swipl -l %{parse2xml} -g main %{parse} > %{target}
 
 # Create an XML file containing all tags, used for adding missing derivation placeholders
 [out/%{lang}/%{pr}/%{sid}/%{user}.lex.xml]
-dep.off = out/%{lang}/%{pr}/%{sid}/%{user}.tok.off
+dep.off = out/%{lang}/%{pr}/%{sid}/auto.tok.off
 dep.cols2xml = src/python/cols2xml.py
 dep.super = out/%{lang}/%{pr}/%{sid}/%{user}.super
 recipe = paste <(cut -d ' ' -f 3 %{off}) <(cut -d ' ' -f 4- %{off}) <(cut -d ' ' -f 1 %{off}) <(cut -d ' ' -f 2 %{off}) %{super} | python %{cols2xml} from to super > %{target}
