Added comment to rule for .raw files

--- a/produce.ini
+++ b/produce.ini
@@ -45,6 +45,11 @@ type = task
 
 ### RAW #######################################################################
 
+# For working from the command line, it is convenient to have a rule to create
+# .raw files. This only works if the sentence is in the database though. The
+# Web interface generates .raw files for sentences whether they are in the
+# database or not.
+
 [raw/%{lang}/%{pr}/%{sid}.raw]
 dep.raw = src/python/raw.py
 recipe =
