--- a/produce.ini
+++ b/produce.ini
@@ -69,6 +69,17 @@ dep.toff = out/%{lang}/%{pr}/%{tid}/auto.tok.off
 dep.soff = out/eng/%{sid[:2]}/%{sid}/auto.tok.off
 recipe = swipl -l %{derproj} -g main %{der} %{wordalign} %{sentalign} %{toff} %{soff} > %{target}
 
+[retrain]
+type = task
+depfile = retrain/retrain.d
+
+[retrain/retrain.d]
+dep.retraindata = src/python/retraindata.py
+recipe =
+	set -e
+	mkdir -p retrain
+	python3 %{retraindata} > %{target}
+
 ### TOKENIZATION ##############################################################
 
 # We use the automatic tokenization everywhere. In the rare cases where there
