retrain-%{lang} rule: produce input for GIZA++
Including two .tok files and two .ids files per target language.

--- a/produce.ini
+++ b/produce.ini
@@ -59,6 +59,17 @@ recipe =
 
 ### PROJECTION ################################################################
 
+[retrain-%{lang}]
+type = task
+deps = retrain/eng-%{lang}.eng.tok
+
+[retrain/eng-%{lang}.d]
+dep.retraindata_tok = src/python/retraindata_tok.py
+recipe =
+	set -e
+	mkdir -p retrain
+	python3 %{retraindata_tok} %{lang} > %{target}
+
 [out/%{lang}/%{pr}/%{tid}/proj/%{sid}/proj.parse.tags]
 dep.derproj = src/prolog/derproj.pl
 deps = src/prolog/der.pl src/prolog/util.pl src/prolog/catobj.pl src/prolog/sr.pl src/prolog/slashes.pl src/prolog/ccg.pl
@@ -69,16 +80,11 @@ dep.toff = out/%{lang}/%{pr}/%{tid}/auto.tok.off
 dep.soff = out/eng/%{sid[:2]}/%{sid}/auto.tok.off
 recipe = swipl -l %{derproj} -g main %{der} %{wordalign} %{sentalign} %{toff} %{soff} > %{target}
 
-[retrain]
-type = task
-depfile = retrain/retrain.d
-
-[retrain/retrain.d]
-dep.retraindata = src/python/retraindata.py
-recipe =
-	set -e
-	mkdir -p retrain
-	python3 %{retraindata} > %{target}
+[retrain/eng-%{lang}.eng.tok]
+outputs = retrain/eng-%{lang}.%{lang}.tok retrain/eng-%{lang}.eng.ids retrain/eng-%{lang}.%{lang}.ids
+#depfile = retrain/eng-%{lang}.d
+dep.retraindata_tok_pairs = src/python/retraindata_tok_pairs.py
+recipe = python3 %{retraindata_tok_pairs} %{lang}
 
 ### TOKENIZATION ##############################################################
 
