Commented dependency back in

--- a/produce.ini
+++ b/produce.ini
@@ -82,7 +82,7 @@ recipe = swipl -l %{derproj} -g main %{der} %{wordalign} %{sentalign} %{toff} %{
 
 [retrain/eng-%{lang}.eng.tok]
 outputs = retrain/eng-%{lang}.%{lang}.tok retrain/eng-%{lang}.eng.ids retrain/eng-%{lang}.%{lang}.ids
-#depfile = retrain/eng-%{lang}.d
+depfile = retrain/eng-%{lang}.d
 dep.retraindata_tok_pairs = src/python/retraindata_tok_pairs.py
 recipe = python3 %{retraindata_tok_pairs} %{lang}
 
