Derivation projection (work in progress)
Still need to bridge the format gap between EasyCCG/parse2xml and derproj.pl.

--- a/produce.ini
+++ b/produce.ini
@@ -57,7 +57,7 @@ recipe =
 	mkdir -p raw/%{lang}/%{pr}
 	python3 %{raw} %{lang} %{sid} > %{target}
 
-### PROJECTION ################################################################
+### DERIVATION PROJECTION #####################################################
 
 [retrain-%{lang}]
 type = task
@@ -69,6 +69,29 @@ recipe =
 	set -e
 	mkdir -p retrain
 	python3 %{retraindata_tok} %{lang} > %{target}
+
+[out/%{lang}/%{pr}/%{tid}/proj/%{sid}/auto.wordalign]
+dep.wordalign = src/python/wordalign.py
+recipe =
+	set -e
+	mkdir -p out/%{lang}/%{pr}/%{tid}/proj/%{sid}
+	python %{wordalign} %{lang} %{tid} %{sid} > %{target}
+
+[out/%{lang}/%{pr}/%{tid}/proj/%{sid}/auto.sentalign]
+dep.sentalign = src/python/sentalign.py
+dep.foroff = out/%{lang}/%{pr}/%{tid}/auto.tok.off
+dep.engoff = out/eng/%{sid[:2]}/%{sid}/auto.tok.off
+recipe = python %{sentalign} %{foroff} %{engoff} > %{target}
+
+[out/%{lang}/%{pr}/%{tid}/proj/%{sid}/proj.parse.tags]
+dep.derproj = src/prolog/derproj.pl
+deps = src/prolog/der.pl src/prolog/util.pl src/prolog/catobj.pl src/prolog/sr.pl src/prolog/slashes.pl src/prolog/ccg.pl
+dep.der = out/eng/%{sid[:2]}/%{sid}/auto.der.incomplete
+dep.wordalign = out/%{lang}/%{pr}/%{tid}/proj/%{sid}/auto.wordalign
+dep.sentalign = out/%{lang}/%{pr}/%{tid}/proj/%{sid}/auto.sentalign
+dep.toff = out/%{lang}/%{pr}/%{tid}/auto.tok.off
+dep.soff = out/eng/%{sid[:2]}/%{sid}/auto.tok.off
+recipe = swipl -l %{derproj} -g main %{der} %{wordalign} %{sentalign} %{toff} %{soff} > %{target}
 
 ### TOKENIZATION ##############################################################
 
