--- a/retrain.ini
+++ b/retrain.ini
@@ -69,17 +69,5 @@ ncpus = 4
 recipe =
 	set -e
 	set -o pipefail
-	(./ext/mgizapp/bin/mgiza -ncpus %{ncpus} -sourcevocabularyfile %{srcvcb} -targetvocabularyfile %{trgvcb} -corpusfile %{snt} -outputfileprefix retrain/%{frnlang}-en.dict -coocurrencefile %{cooc} 1>&2) 2> %{target}.log
-	cat %{'retrain/{}-en.dict.A3.final.part{}'.format(frnlang, chr(48 + i)) for i in range(int(ncpus))} | python3 ./src/python/dictsort.py > %{target}
-
-### DERIVATION PROJECTION #####################################################
-
-[out/%{lang}/%{pr}/%{tid}/proj/%{sid}/proj.parse.tags]
-dep.derproj = src/prolog/derproj.pl
-deps = src/prolog/der.pl src/prolog/util.pl src/prolog/catobj.pl src/prolog/sr.pl src/prolog/slashes.pl src/prolog/ccg.pl
-dep.der = out/eng/%{sid[:2]}/%{sid}/auto.der.xml.incomplete
-dep.wordalign = out/%{lang}/%{pr}/%{tid}/proj/%{sid}/auto.wordalign
-dep.sentalign = out/%{lang}/%{pr}/%{tid}/proj/%{sid}/auto.sentalign
-dep.toff = out/%{lang}/%{pr}/%{tid}/auto.tok.off
-dep.soff = out/eng/%{sid[:2]}/%{sid}/auto.tok.off
-recipe = swipl -l %{derproj} -g main %{der} %{wordalign} %{sentalign} %{toff} %{soff} > %{target}
+	(./ext/mgizapp/bin/mgiza -ncpus %{ncpus} -sourcevocabularyfile %{srcvcb} -targetvocabularyfile %{trgvcb} -corpusfile %{snt} -outputfileprefix retrain/%{frnlang}-eng.dict -coocurrencefile %{cooc} 1>&2) 2> %{target}.log
+	cat %{'retrain/{}-eng.dict.A3.final.part{}'.format(frnlang, chr(48 + i)) for i in range(int(ncpus))} | python3 ./src/python/dictsort.py > %{target}
