--- a/produce.ini
+++ b/produce.ini
@@ -198,6 +198,13 @@ dep.parse2xml = src/prolog/parse2xml.pl
 deps = src/prolog/util.pl src/prolog/slashes.pl
 recipe = swipl -l %{parse2xml} -g main %{parse} > %{target}
 
+# Convert derivations to Boxer Prolog format
+[out/%{lang}/%{pr}/%{sid}/%{user}.der.incomplete]
+dep.parse = out/%{lang}/%{pr}/%{sid}/%{user}.parse.tags
+dep.parse2boxer = src/prolog/parse2boxer.pl
+deps = src/prolog/util.pl src/prolog/slashes.pl
+recipe = swipl -l %{parse2boxer} -g main %{parse} > %{target}
+
 # Create an XML file containing all tags, used for adding missing derivation placeholders
 [out/%{lang}/%{pr}/%{sid}/%{user}.lex.xml]
 dep.off = out/%{lang}/%{pr}/%{sid}/auto.tok.off
