Bugfix: sentalign.py argument order

--- a/produce.ini
+++ b/produce.ini
@@ -81,7 +81,7 @@ recipe =
 dep.sentalign = src/python/sentalign.py
 dep.foroff = out/%{lang}/%{pr}/%{tid}/auto.tok.off
 dep.engoff = out/eng/%{sid[:2]}/%{sid}/auto.tok.off
-recipe = python %{sentalign} %{foroff} %{engoff} > %{target}
+recipe = python %{sentalign} %{engoff} %{foroff} > %{target}
 
 [out/%{lang}/%{pr}/%{tid}/proj/%{sid}/proj.parse.tags]
 dep.derproj = src/prolog/derproj.pl
